--- a/trees.html
+++ b/trees.html
@@ -4,4 +4,5 @@
 <canvas id="c"></canvas>
 <style>body { margin: 0px; }</style>
 <script src="lambda-lib.js"></script>
+<script src="data.js"></script>
 <script src="trees.js"></script>
