--- a/trees.html
+++ b/trees.html
@@ -1,8 +1,13 @@
-<script src="https://code.jquery.com/jquery-2.2.1.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
-<script src="util5.js"></script>
-<canvas id="c"></canvas>
-<style>body { margin: 0px; }</style>
-<script src="lambda-lib.js"></script>
-<script src="data.js"></script>
-<script src="trees.js"></script>
+<html>
+  <head>
+	 <script src="https://code.jquery.com/jquery-2.2.1.js"></script>
+	 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
+	 <script src="util5.js"></script>
+	 <style>body { margin: 0px; }</style>
+  </head>
+  <body>
+	 <script src="lambda-lib.js"></script>
+	 <script src="data.js"></script>
+	 <script src="trees.js"></script>
+  </body>
+</html>
