--- a/trees.html
+++ b/trees.html
@@ -5,6 +5,7 @@
 	 <script src="util5.js"></script>
   </head>
   <body>
+	 <script>module = {exports:{}}</script>
 	 <script src="lambda-lib.js"></script>
 	 <script src="data.js"></script>
 	 <script src="trees.js"></script>
