--- a/trees.html
+++ b/trees.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-	 <script src="https://code.jquery.com/jquery-2.2.1.js"></script>
-	 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
+	 <script src="jquery.js"></script>
+	 <script src="underscore.js"></script>
 	 <script src="util5.js"></script>
   </head>
   <body>
